--- a/frontend/my-app/src/app/app.component.html
+++ b/frontend/my-app/src/app/app.component.html
@@ -61,25 +61,6 @@
     font-weight: 600;
   }
 
-  .toolbar img {
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 8px;
-  }
-
-  .toolbar #youtube-logo {
-    height: 40px;
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo:hover,
-  .toolbar #youtube-logo:hover {
-    opacity: 0.8;
-  }
-
   .content {
     display: flex;
     margin: 82px auto 32px;
@@ -190,29 +171,17 @@
 
   .terminal {
     position: relative;
-    width: 80%;
+    width: 600px;
     max-width: 600px;
+    max-height: 1000px;
     border-radius: 6px;
-    padding-top: 45px;
+    padding-top: 20px;
     margin-top: 8px;
-    overflow: hidden;
+    overflow-y: scroll;
     background-color: rgb(15, 15, 16);
   }
 
-  .terminal::before {
-    content: "\2022 \2022 \2022";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 4px;
-    background: rgb(58, 58, 58);
-    color: #c2c3c4;
-    width: 100%;
-    font-size: 2rem;
-    line-height: 0;
-    padding: 14px 0;
-    text-indent: 4px;
-  }
+
 
   .terminal pre {
     font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
@@ -253,39 +222,6 @@
     align-items: center;
   }
 
-  .github-star-badge {
-    color: #24292e;
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    padding: 3px 10px;
-    border: 1px solid rgba(27, 31, 35, .2);
-    border-radius: 3px;
-    background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-    margin-left: 4px;
-    font-weight: 600;
-  }
-
-  .github-star-badge:hover {
-    background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
-    border-color: rgba(27, 31, 35, .35);
-    background-position: -.5em;
-  }
-
-  .github-star-badge .material-icons {
-    height: 16px;
-    width: 16px;
-    margin-right: 4px;
-  }
-
-  svg#clouds {
-    position: fixed;
-    bottom: -160px;
-    left: -230px;
-    z-index: -10;
-    width: 1920px;
-  }
-
   /* Responsive Styles */
   @media screen and (max-width: 767px) {
 
@@ -321,32 +257,28 @@
 <div class="toolbar" role="banner">
   <div class="spacer"></div>
 
+
 </div>
 
 <div class="content" role="main">
 
   <!-- Highlight Card -->
-  <div class="card highlight-card card-small">
-    <span>{{ title }} app is running!</span>
-  </div>
+
 
   <!-- Resources -->
-  <h2>Resources</h2>
-  <p>Here are some links to help you get started:</p>
+  <h2>Facts</h2>
+  <p>What actions do you want to do?</p>
 
   <div class="card-container">
-
 
   </div>
 
   <!-- Next Steps -->
-  <h2>Actions</h2>
-  <p>What actions do you want to do?</p>
 
   <input type="hidden" #selection>
 
   <div class="card-container">
-    <button class="card card-small" (click)="selection.value = 'random'" tabindex="0">
+    <button class="card card-small" (click)="getRandom()" (click)="selection.value = 'getRandom'" tabindex="0">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
       </svg>
@@ -354,74 +286,56 @@
     </button>
 
 
-    <button class="card card-small" (click)="selection.value = 'byTopic'" tabindex="0">
+    <button class="card card-small" (click)="topic()" tabindex="0">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
       </svg>
       <span>Get Fact by Topic</span>
     </button>
 
-    <button class="card card-small" (click)="selection.value = 'add'" tabindex="0">
+
+    <button class="card card-small" (click)="getTopics()" (click)="selection.value = 'getTopics'" tabindex="0">
+      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+      </svg>
+      <span>Display All Topics</span>
+    </button>
+
+    <button class="card card-small" (click)="add()" tabindex="0">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
       </svg>
       <span>Add Fact</span>
     </button>
 
-    <button class="card card-small" (click)="selection.value = 'test'" tabindex="0">
+    <button class="card card-small" (click)="delete()" tabindex="0">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
       </svg>
       <span>Delete Fact</span>
     </button>
+
+
   </div>
 
   <!-- Terminal -->
   <div class="terminal" [ngSwitch]="selection.value">
     <pre *ngSwitchDefault></pre>
-    <pre *ngSwitchCase="'random'">Called random<script>
-      import fetch from 'node-fetch';
+    <pre *ngSwitchCase="'getRandom'">
+      {{posts.fact}}
+   </pre>
+    <pre *ngSwitchCase="'topic()'">ng add @angular/pwa</pre>
+    <pre *ngSwitchCase="'add()'">ng add _____</pre>
+    <pre *ngSwitchCase="'delete()'">ng test</pre>
+    <pre *ngSwitchCase="'getTopics'">{{posts.result}}</pre>
 
-      const response = await fetch('http://localhost:3000/api/command/facts,random');
-      const data = await response.json();
-
-      console.log(data);
-    </script></pre>
-    <pre *ngSwitchCase="'byTopic'">ng add @angular/pwa</pre>
-    <pre *ngSwitchCase="'add'">ng add _____</pre>
-    <pre *ngSwitchCase="'delete'">ng test</pre>
   </div>
 
   <!-- Links -->
   <div class="card-container">
   </div>
 
-  <!-- Footer -->
-  <footer>
-    Love Angular?&nbsp;
-    <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
-      <div class="github-star-badge">
-        <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <path d="M0 0h24v24H0z" fill="none" />
-          <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
-        </svg>
-        Star
-      </div>
-    </a>
-    <a href="https://github.com/angular/angular" target="_blank" rel="noopener">
-      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" fill="#1976d2" />
-        <path d="M0 0h24v24H0z" fill="none" />
-      </svg>
-    </a>
-  </footer>
 
-  <svg id="clouds" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
-    <title>Gray Clouds Background</title>
-    <path id="Path_39" data-name="Path 39"
-      d="M2379.709,863.793c10-93-77-171-168-149-52-114-225-105-264,15-75,3-140,59-152,133-30,2.83-66.725,9.829-93.5,26.25-26.771-16.421-63.5-23.42-93.5-26.25-12-74-77-130-152-133-39-120-212-129-264-15-54.084-13.075-106.753,9.173-138.488,48.9-31.734-39.726-84.4-61.974-138.487-48.9-52-114-225-105-264,15a162.027,162.027,0,0,0-103.147,43.044c-30.633-45.365-87.1-72.091-145.206-58.044-52-114-225-105-264,15-75,3-140,59-152,133-53,5-127,23-130,83-2,42,35,72,70,86,49,20,106,18,157,5a165.625,165.625,0,0,0,120,0c47,94,178,113,251,33,61.112,8.015,113.854-5.72,150.492-29.764a165.62,165.62,0,0,0,110.861-3.236c47,94,178,113,251,33,31.385,4.116,60.563,2.495,86.487-3.311,25.924,5.806,55.1,7.427,86.488,3.311,73,80,204,61,251-33a165.625,165.625,0,0,0,120,0c51,13,108,15,157-5a147.188,147.188,0,0,0,33.5-18.694,147.217,147.217,0,0,0,33.5,18.694c49,20,106,18,157,5a165.625,165.625,0,0,0,120,0c47,94,178,113,251,33C2446.709,1093.793,2554.709,922.793,2379.709,863.793Z"
-      transform="translate(142.69 -634.312)" fill="#eee" />
-  </svg>
 
 </div>
 
